tests/ui/02-commands.stderr
error: invalid system parameter
 --> tests/ui/02-commands.rs:5:14
  |
5 | fn system(_: &mut Commands) {}
  |              ^^^^^^^^^^^^^
  |
  = help: use `mut commands: Commands`
